--- a/index.html
+++ b/index.html
@@ -22,38 +22,30 @@
     </form>
 </nav>
 </nav>
-<div class="card card-image" >
-<img src="assets/images/EverybodyWelcome.png" class="img-fluid" alt="">
-  <div class="text-dark text-center rgba-stylish-strong py-5 px-4">
-    <div class="py-5"> 
+<div class="bg-card py-5 text-center">Come and have a look on us!</div>
+    <!-- Text -->
+   <img class="jumbotron" src="assets/images/EverybodyWelcome.png" alt="bg">
+  <p class="text-dark text-center rgba-stylish-strong py-5 px-4"></p>
        <h1 class="font-weight-bold text-dark card-title h1 my-4 py-2">Classical Opera Singing Classes<br> 
 For You!</h1> 
-</div>
-  </div>
-</div>
-   <div class="py-5"> 
-  <div class="card card-image ">
-    <h3 class="card-title h3 my-4"><strong> Come and have a look on us!</strong></h3>
-    <!-- Text -->
-    <p class="card-text font-weight-bold py-2">Maybe You want to start, but you dont know where?<br>
+    <p class="py-5 text-center">Maybe You want to start, but you dont know where?<br>
    Maybe you're worried ,that your voice its not clean or strong enaught ?<br>
  Or . . maybe you think, that you are too old Or a bit too young To start?</p>
- <img class= "background-image: url(assets/images/EverybodyWelcome.png)"> 
-   <h3 class="card-title font-weight-bold text-center h3 my-4"> Would You like to Sing like they sing on the Stage?<br>
-    I can help You!</h3>
-      <h3 class="card-text font-weight-bold text-center h3 my-4"><strong>As a Vocal pedagogue and Profesional Opera singer, I do have more than 40 years of experiences on the stage in National and Metropolitan Opera House ..<br>
- As well, as 30 years of Profesional Piano Lessons given!</strong></h3>
+ 
+   <h2 class="bg-center h2 my-4 py-2"> Would You like to Sing like they sing on the Stage?<br>
+    I can help You!</h2>
+        <p class="py-5 text-center">As a Vocal pedagogue and Profesional Opera singer, I do have more than 40 years of experiences on the stage in National and Metropolitan Opera House ..<br>
+ As well, as 30 years of Profesional Piano Lessons given!</p>
       <p class="font-weight-bold">Opera is<strong> TRULY</strong> for everybody</p>
-</div> 
-<div class="card card-image">
-<div class="mask rgba-light(white)-image-fluid">
+      </div>
+      </div>
+<div class="card -centered-video">
+<div class="mask rgba-light-center">
      <h3 class="h3 dark-text">My YouTube video</h3>
 <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/5z7t1KlSt-c? start=3"  frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope;picture-in-picture" allowfullscreen="">
 </iframe>
 </div>
  <div class="card card-image" >
-  <div class="text-dark text-center rgba-stylish-strong py-5 px-4">
-   <img class= "background-image: url(assets/images/EverybodyWelcome.png)">
    <h3 class="h3 dark-text">what others says</h3>
   <div class="mask rgba-light(white)-image-fluid">
  <div class="text-dark text-center py-5 px-4">
@@ -128,13 +120,14 @@ Bass :The bass is the lowest singing voice. The bass voice has the lowest tessit
 <h4 class="text-bold h4 mb-4">address</h4><br>
 <p class="card-text-bold">Stromova 22,<br>
 Bratislava 3,Stare mesto,840 01</p>
+  </div>
   <p class="card-text-bold"><strong> Piano Lessons</strong> :Tue/Thu/add.Sat - from 9am to 10pm</p>
   <p class="card-text-bold"><strong> Classical Classes</strong> : Mon/Wed/Fri - from 8am to 9pm</p>
    </div>
    <p class="card-text-bold"><strong> email:</strong> opera.maria.borb@gmail.com</p>
    <p class="card-text-bold"><strong> mobile:</strong> mob: +421335789556 </p>
 </div></div>
-<footer>
+<footer class="footer-form">
 <div class="list-style-bold">
 <ul class="list-unstyled">
         <li><a class p-2 m-2 li-ic="https://www.facebook.com" href="#">Facebook</a></li>
@@ -143,6 +136,7 @@ Bratislava 3,Stare mesto,840 01</p>
         <li><a class p-2 m-2 li-ic="https://www.rtvs.sk/televizia" href="#">RTVS</a></li>
         <li><a class p-2 m-2 li-ic="https://www.bratislavatickets.com/en" href="#">Bratislava Capital-ticket-portal</a></li>
       </ul>
+</div>
 </div>
 </footer>
 <!-------jquery------------------------------------------------------->
