--- a/index.html
+++ b/index.html
@@ -22,31 +22,39 @@
     </form>
 </nav>
 </nav>
-<div class="bg-card py-5 text-center">Come and have a look on us!</div>
-    <!-- Text -->
-   <img class="jumbotron" src="assets/images/EverybodyWelcome.png" alt="bg">
-  <p class="text-dark text-center rgba-stylish-strong py-5 px-4"></p>
-       <h1 class="font-weight-bold text-dark card-title h1 my-4 py-2">Classical Opera Singing Classes<br> 
-For You!</h1> 
+<div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-light">
+  <h2 class="display-5">Classical Opera Singing Classes</h2>
+      <p class="lead">and Piano!</p>
+    <img src="assets/images/EverybodyWelcome.png" class="img-fluid" alt="hero"/> 
+  </div>
+  -----------------------
+  <!--------headre 100% dobre NECHAT----!------------------->
+  <div class="text-dark position-center rgba-stylish-strong py-5 px-4">
+    <div class="py-5">
+    <h3 class="bg-center h3 my-4 py-2"> LOVE . . TRAGEDY ... LAUGHT .. . All human passions are represented in Opera.</h3>
+
+<h3 class="h3 dark-text position-center bg-center h3 my-4 py-3">
+    Come and have a look on us!</h3>
+ <p class="text-dark text-center rgba-stylish-strong py-5 px-4">
+       <h1 class="font-weight-bold text-dark card-title h1 my-4 py-2"> Would You like to Sing like they sing on the Stage?<br>
+    I can help You!</h1> 
     <p class="py-5 text-center">Maybe You want to start, but you dont know where?<br>
    Maybe you're worried ,that your voice its not clean or strong enaught ?<br>
  Or . . maybe you think, that you are too old Or a bit too young To start?</p>
- 
-   <h2 class="bg-center h2 my-4 py-2"> Would You like to Sing like they sing on the Stage?<br>
-    I can help You!</h2>
-        <p class="py-5 text-center">As a Vocal pedagogue and Profesional Opera singer, I do have more than 40 years of experiences on the stage in National and Metropolitan Opera House ..<br>
+ <p class="py-5 text-center">As a Vocal pedagogue and Profesional Opera singer, I do have more than 40 years of experiences on the stage in National and Metropolitan Opera House ..<br>
  As well, as 30 years of Profesional Piano Lessons given!</p>
-      <p class="font-weight-bold">Opera is<strong> TRULY</strong> for everybody</p>
-      </div>
-      </div>
-<div class="card -centered-video">
+<p class="font-weight-bold">Opera is<strong> TRULY</strong> for everybody</p></p>
+  </div>
+
+<div class="card-card video text-center bg-light">
 <div class="mask rgba-light-center">
      <h3 class="h3 dark-text">My YouTube video</h3>
 <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/5z7t1KlSt-c? start=3"  frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope;picture-in-picture" allowfullscreen="">
 </iframe>
 </div>
- <div class="card card-image" >
-   <h3 class="h3 dark-text">what others says</h3>
+</div>
+ <div class="card center card-image" >
+   <h2 class="h2 bold-text">what others says</h2>
   <div class="mask rgba-light(white)-image-fluid">
  <div class="text-dark text-center py-5 px-4">
  <p class="mb-4 pb-2 px-md-5 mx-md-5 text-size-lead">
@@ -81,54 +89,56 @@ Bass :The bass is the lowest singing voice. The bass voice has the lowest tessit
     </div>
   </div>
    <div class="card card-image" ><h4 class="text-bold h4 mb-4">Photos</h4>
-<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-  <div class="carousel-inner">
-     <div class="carousel-item active">
-      <img class="mw-10" src="assets/images/zbor.png" alt="First slide">
+<div id="carouselExampleControls" class="carousel-slide" data-ride="carousel">
+  <div class="carousel-inner-active">
+     <div class="carousel-item-active">
+      <img class="mw-100" src="assets/images/zbor.png" alt="First slide">
     </div>
     <div class="carousel-item">
-      <img class="mw-10" src="assets/images/main.bg.png" alt="Second slide">
+      <img class="mw-100" src="assets/images/main.bg.png" alt="Second slide">
     </div>
     <div class="carousel-item">
-      <img class="mw-10" src="assets/images/guisepeW MERY.png" alt="Third slide">
+      <img class="mw-100" src="assets/images/guisepeW MERY.png" alt="Third slide">
     </div>
  <div class="carousel-item">
-      <img class="mw-10" src="assets/images/jazero.jpeg" alt="Fourth slide">
+      <img class="mw-100" src="assets/images/jazero.jpeg" alt="Fourth slide">
     </div>
  <div class="carousel-item">
-      <img class="mw-10"  src="assets/images/orchestra-bg-ready.png" alt="Fifth slide">
+      <img class="mw-100"  src="assets/images/orchestra-bg-ready.png" alt="Fifth slide">
     </div>
  <div class="carousel-item">
-      <img class="mw-10"  src="assets/images/LaTraviata.png" alt="Sixth slide">
+      <img class="mw-100"  src="assets/images/LaTraviata.png" alt="Sixth slide">
     </div>
  <div class="carousel-item">
-      <img class="mw-10"  src="assets/images/Mery.png" alt="Seventh slide">
+      <img class="mw-100"  src="assets/images/Mery.png" alt="Seventh slide">
     </div>
   </div>
   <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
     <span class="sr-only">Previous</span>
   </a>
+</div>
   <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
     <span class="carousel-control-next-icon" aria-hidden="true"></span>
     <span class="sr-only">Next</span>
   </a>
-<div class="jumbotron text-center mask rgba-white-slight">
-  <h4 class="card-title h4 pb-2"><strong>where you can find us</strong></h4>
-  <div class="view overlay my-4">
-    <img src="assets/images/xmass inv.jpg" class="img-fluid" alt="">
-<h4 class="text-bold h4 mb-4">address</h4><br>
-<p class="card-text-bold">Stromova 22,<br>
+   </div>
+</div>
+   </div>
+ <div class="text-dark text-center rgba-stylish-strong py-5 px-4">
+      <h2 class="display-5">where you can find us</h2>
+      <p class="lead">address<br>
+Stromova 22,<br>
 Bratislava 3,Stare mesto,840 01</p>
-  </div>
+ 
   <p class="card-text-bold"><strong> Piano Lessons</strong> :Tue/Thu/add.Sat - from 9am to 10pm</p>
   <p class="card-text-bold"><strong> Classical Classes</strong> : Mon/Wed/Fri - from 8am to 9pm</p>
-   </div>
    <p class="card-text-bold"><strong> email:</strong> opera.maria.borb@gmail.com</p>
    <p class="card-text-bold"><strong> mobile:</strong> mob: +421335789556 </p>
-</div></div>
-<footer class="footer-form">
-<div class="list-style-bold">
+    </div>
+  </div>
+  
+<div class="card-text-center-bold">
 <ul class="list-unstyled">
         <li><a class p-2 m-2 li-ic="https://www.facebook.com" href="#">Facebook</a></li>
         <li><a class p-2 m-2 li-ic="https://www.youtube.com" href="#">YouTube</a></li>
@@ -137,8 +147,7 @@ Bratislava 3,Stare mesto,840 01</p>
         <li><a class p-2 m-2 li-ic="https://www.bratislavatickets.com/en" href="#">Bratislava Capital-ticket-portal</a></li>
       </ul>
 </div>
-</div>
-</footer>
+    </div>
 <!-------jquery------------------------------------------------------->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
