--- a/index.html
+++ b/index.html
@@ -27,8 +27,7 @@
       <p class="lead">and Piano!</p>
     <img src="assets/images/EverybodyWelcome.png" class="img-fluid" alt="hero"/> 
   </div>
-  -----------------------
-  <!--------headre 100% dobre NECHAT----!------------------->
+  
   <div class="text-dark position-center rgba-stylish-strong py-5 px-4">
     <div class="py-5">
     <h3 class="bg-center h3 my-4 py-2"> LOVE . . TRAGEDY ... LAUGHT .. . All human passions are represented in Opera.</h3>
@@ -88,7 +87,7 @@ Bass :The bass is the lowest singing voice. The bass voice has the lowest tessit
      </ul>
     </div>
   </div>
-   <div class="card card-image" ><h4 class="text-bold h4 mb-4">Photos</h4>
+   <div class="card carousel slide" ><h4 class="text-bold h4 mb-4">Photos</h4>
 <div id="carouselExampleControls" class="carousel-slide" data-ride="carousel">
   <div class="carousel-inner-active">
      <div class="carousel-item-active">
