--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ Bass :The bass is the lowest singing voice. The bass voice has the lowest tessit
     </div>
   </div>
    <div class="card carousel slide" ><h4 class="text-bold h4 mb-4">Photos</h4>
-<div id="carouselExampleControls" class="carousel-slide" data-ride="carousel">
+<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
   <div class="carousel-inner-active">
      <div class="carousel-item-active">
       <img class="mw-100" src="assets/images/zbor.png" alt="First slide">
