--- a/index.html
+++ b/index.html
@@ -73,23 +73,20 @@
   <li class="list-group-item">Mezzo-soprano:The mezzo-soprano voice is the middle-range voice type for females. It lies between the soprano and contralto ranges, over-lapping both of them. The typical range of this voice is between A3 (the A below middle C) to A5 (two octaves higher). </li>
   <li class="list-group-item">Contralto:The contralto voice is the lowest female voice. A  The typical contralto range lies between F3 (the F below middle C) to F5 (the second F above middle C).
 </li>
-  <ul class="list-group mx-5 mb-5"><strong>Males: </strong>
-<li class="list-group-item">
-Tenor: The tenor is the highest male voice within the modal register.
+	    </ul>
+	    <ul class="list-group mx-5 mb-5"><strong> Males: </strong>
+  <li class="list-group-item">Tenor: The tenor is the highest male voice within the modal register.
 Tenor voice range (C3–C5) indicated on piano keyboard in green with dot marking middle C (C4). The typical tenor voice lies between C3 (one octave below middle C) to C5 (one octave above middle C). </li>
-<li class="list-group-item">
-Baritone: The baritone voice is the middle-range voice type for males; it lies between the bass and tenor ranges, overlapping both of them.
-Baritone voice range (A2–A4) indicated on piano keyboard in green with dot marking middle C (C4). Baritone comes from the Italian baritono, with its Greek root word barytonos, "deep-voiced," combining barys, "heavy or deep" and tonos, "tone.</li>
-<li class="list-group-item">
-Bass :The bass is the lowest singing voice. The bass voice has the lowest tessitura of all the voices. The typical bass range lies between (E2–E4) indicated on piano keyboard in green with dot marking middle C.
-</li>
-</ul>
+  <li class="list-group-item">Baritone: The baritone voice is the middle-range voice type for males; it lies between the bass and tenor ranges, overlapping both of them.Baritone voice range (A2–A4) indicated on piano keyboard in green with dot marking middle C (C4). Baritone comes from the Italian baritono, with its Greek root word barytonos, "deep-voiced," combining barys, "heavy or deep" and tonos, "tone.
+		    </li>
+		    <li class="list-group-item">Bass :The bass is the lowest singing voice. The bass voice has the lowest tessitura of all the voices. The typical bass range lies between (E2–E4) indicated on piano keyboard in green with dot marking middle C.. </li>
      </ul>
     </div>
   </div>
+	  <div class="carousel-inner-active">
    <div class="card carousel slide" ><h4 class="text-bold h4 mb-4">Photos</h4>
 <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-  <div class="carousel-inner-active">
+
      <div class="carousel-item-active">
       <img class="mw-100" src="assets/images/zbor.png" alt="First slide">
     </div>
